<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina3_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Dog Age View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="DogAgeViewController" customModule="CalculadoraPerruna" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hVj-Hx-VBt">
                                <rect key="frame" x="-20" y="270" width="100" height="90"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="90" id="37L-OS-oKA"/>
                                    <constraint firstAttribute="width" constant="100" id="5Ia-mZ-Ams"/>
                                </constraints>
                            </view>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pxj-Ga-S5G">
                                <rect key="frame" x="0.0" y="300" width="320" height="180"/>
                                <subviews>
                                    <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="25" translatesAutoresizingMaskIntoConstraints="NO" id="HnA-mP-1l6">
                                        <rect key="frame" x="14" y="-10" width="292" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="dogAgeID"/>
                                        <connections>
                                            <action selector="valueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="1g1-7N-ZVk"/>
                                        </connections>
                                    </slider>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desliza el hueso para cambiar la edad " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LEV-li-BXr">
                                        <rect key="frame" x="7" y="78.5" width="306" height="23"/>
                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="HnA-mP-1l6" secondAttribute="trailing" constant="16" id="ICe-yP-3Jo"/>
                                    <constraint firstItem="HnA-mP-1l6" firstAttribute="top" secondItem="pxj-Ga-S5G" secondAttribute="top" constant="-10" id="ROo-JE-YWc"/>
                                    <constraint firstItem="HnA-mP-1l6" firstAttribute="leading" secondItem="pxj-Ga-S5G" secondAttribute="leading" constant="16" id="Tyu-IU-Fhu"/>
                                    <constraint firstItem="LEV-li-BXr" firstAttribute="centerX" secondItem="pxj-Ga-S5G" secondAttribute="centerX" id="kdO-2P-Lwc"/>
                                    <constraint firstItem="LEV-li-BXr" firstAttribute="centerY" secondItem="pxj-Ga-S5G" secondAttribute="centerY" id="rMw-Yi-TYu"/>
                                    <constraint firstAttribute="height" constant="180" id="wip-RF-ak9"/>
                                </constraints>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hJz-Yc-U4g">
                                <rect key="frame" x="115" y="137" width="90" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="90" id="CPM-cD-aZS"/>
                                    <constraint firstAttribute="height" constant="100" id="KDf-fe-wAa"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="40"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="egF-6k-tta">
                                <rect key="frame" x="95" y="-25.5" width="130" height="120"/>
                                <accessibility key="accessibilityConfiguration" identifier="humanAgeLabelID"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="130" id="0DQ-d8-U5y"/>
                                    <constraint firstAttribute="height" constant="120" id="XLZ-FJ-eZs"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="71"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="años humanos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EkM-AV-5Lo">
                                <rect key="frame" x="104.5" y="104.5" width="111" height="22.5"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="22.670000000000002" id="LrN-IV-f5q"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="años perrunos" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xGN-XQ-pTi">
                                <rect key="frame" x="111.5" y="227" width="97" height="23"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="23" id="Tny-gD-8Ug"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="10s-0V-oge">
                                <rect key="frame" x="274" y="16" width="30" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="infoID"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="30" id="A9N-ec-Cal"/>
                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="30" id="yCh-ax-Bdh"/>
                                </constraints>
                                <state key="normal" image="informacion"/>
                                <connections>
                                    <action selector="infoButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Iab-HO-MfY"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="0.93708118098493154" green="0.63190282534246578" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="pxj-Ga-S5G" secondAttribute="bottom" id="4ad-8Z-d8a"/>
                            <constraint firstItem="egF-6k-tta" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="7PV-px-fWD"/>
                            <constraint firstItem="hJz-Yc-U4g" firstAttribute="top" relation="greaterThanOrEqual" secondItem="EkM-AV-5Lo" secondAttribute="bottom" constant="10" id="9O3-YV-GNb"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="10s-0V-oge" secondAttribute="trailing" constant="16" id="Fi7-2a-zEB"/>
                            <constraint firstItem="pxj-Ga-S5G" firstAttribute="firstBaseline" secondItem="hVj-Hx-VBt" secondAttribute="baseline" constant="-60" id="GY7-SN-SdH"/>
                            <constraint firstItem="xGN-XQ-pTi" firstAttribute="top" secondItem="hJz-Yc-U4g" secondAttribute="bottom" constant="-10" id="Gvh-0O-TOv"/>
                            <constraint firstItem="EkM-AV-5Lo" firstAttribute="top" secondItem="egF-6k-tta" secondAttribute="bottom" constant="10" id="IN1-Wr-pmx"/>
                            <constraint firstItem="hJz-Yc-U4g" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="M0a-yn-B0T"/>
                            <constraint firstItem="xGN-XQ-pTi" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="PC6-zA-HnG"/>
                            <constraint firstItem="pxj-Ga-S5G" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="YiQ-NZ-HeU"/>
                            <constraint firstItem="10s-0V-oge" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="gK3-FV-Go8"/>
                            <constraint firstItem="EkM-AV-5Lo" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="lpA-tx-rgb"/>
                            <constraint firstItem="hVj-Hx-VBt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="-20" id="pAe-ah-m2c"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="pxj-Ga-S5G" secondAttribute="trailing" id="qhn-Y8-rjb"/>
                            <constraint firstItem="pxj-Ga-S5G" firstAttribute="top" secondItem="xGN-XQ-pTi" secondAttribute="bottom" constant="50" id="tKh-Lf-8Pl"/>
                            <constraint firstItem="egF-6k-tta" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" priority="750" constant="100" id="znk-5a-C8I"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ageInformationLabel" destination="xGN-XQ-pTi" id="zYn-8Q-TR2"/>
                        <outlet property="ageLabel" destination="hJz-Yc-U4g" id="CO4-e1-Ce4"/>
                        <outlet property="ageSlider" destination="HnA-mP-1l6" id="Pa0-Ug-OTC"/>
                        <outlet property="backGroundIndicatorView" destination="hVj-Hx-VBt" id="5kf-jW-ejV"/>
                        <outlet property="bgViewLeadingContraint" destination="pAe-ah-m2c" id="giF-bc-wR7"/>
                        <outlet property="humanAgeLabel" destination="egF-6k-tta" id="R0a-Gc-KYR"/>
                        <outlet property="humanInformationLabel" destination="EkM-AV-5Lo" id="lcO-ja-vsO"/>
                        <outlet property="instructionsLabel" destination="LEV-li-BXr" id="PET-Fr-Tni"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="93.75"/>
        </scene>
    </scenes>
    <resources>
        <image name="informacion" width="64" height="64"/>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
