...
                </textView>
                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="kZG-t8-qAN">
                    <rect key="frame" x="16" y="796" width="382" height="50"/>
                    <subviews>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u7P-oJ-86z">
                            <rect key="frame" x="0.0" y="0.0" width="117.5" height="50"/>
                            <accessibility key="accessibilityConfiguration" identifier="natGeoLinkID"/>
                            <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="15"/>
                            <state key="normal" title="National Geo"/>
                            <connections>
                                <action selector="linksButtonTapped:" destination="-1" eventType="touchUpInside" id="gQ0-Ne-WHO"/>
                            </connections>
                        </button>
...
                    <nil key="textColor"/>
                    <nil key="highlightedColor"/>
                </label>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <accessibility key="accessibilityConfiguration" identifier="infoViewID"/>
            <constraints>
                <constraint firstItem="muY-sq-Hxt" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="07x-b8-P1P"/>
                <constraint firstItem="8hy-HF-lvF" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="2IN-AJ-rcX"/>
                <constraint firstItem="WDQ-M3-WZX" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="4YQ-3U-UWM"/>
                <constraint firstItem="kZG-t8-qAN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="I4p-8q-svp"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="muY-sq-Hxt" secondAttribute="trailing" constant="16" id="IJA-oh-vwX"/>
...
